--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "By: @Patrikybrito_dev",
+    "name": "Context",
     "slug": "context",
     "version": "1.0.0",
     "orientation": "portrait",
